<resources>
    <string name="app_name">Agenda_DMOS5</string>
    <string name="tag">AGENDA</string>
    <string name="data_file">dados_contatos</string>
    <string name="table_contatos">contatos</string>
    <string name="column_nome">nome</string>
    <string name="column_telefone">telefone</string>
    <string name="column_celular">celular</string>
    <string name="hint_nome">Nome do Contato</string>
    <string name="hint_nome_usuario">Nome do Usuário</string>
    <string name="hint_usuario">E-mail</string>
    <string name="hint_telefone">Tel. Fixo</string>
    <string name="hint_celular">Celular</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_numero">Número</string>
    <string name="salvar">Salvar</string>
    <string name="prencher_dados">Informe o nome, telefone e celular do contato</string>
    <string name="erro_dados_invalidos">Dados inválidos</string>
    <string name="erro_insercao_dados">Erro ao salvar o site</string>
    <string name="sucesso">Salvo com sucesso!</string>
    <string name="detalhe">Contato</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">LogIn</string>
    <string name="logout">Sair</string>
    <string name="continuar_conectado">Continuar conectado</string>
    <string name="cadastrar_usuario">Novo Usuário</string>
    <string name="actnovo_msg_save_sucess">Salvo com sucesso</string>
    <string name="actnovo_msg_erro_data_missing">Por favor, preencha todos os dados</string>
    <string name="editar_nome_contato">Editar Contato</string>
    <string name="erro_empty_dados">O nome é obrigatório.</string>
    <string name="erro_null_contato">Contato inválido!</string>
    <string name="usuario_senha_error">Usuário e/ou senha inválidos.</string>
    <string name="cadastro_usuario_error">Usuário já cadastrado.</string>
    <string name="login_usuario_error">Usuário não encontrado.</string>
    <string name="senha_invalida_error">Senha inválida.</string>
    <string name="preferences_usuario_error">Erro ao adicionar preferências de usuário</string>
    <string name="usuario_invalido_error">Usuário inválido.</string>
    <string name="usuario_existe">Usuário já existe.</string>
    <string name="usuario_error">Usuário com menos de 6 caracteres.</string>
    <string name="senha_error">Senhas diferentes e/ou menor do que 6 caracteres.</string>
    <string name="email_error">Email já existe.</string>
    <string name="telefone_error">Telefone já existe.</string>
    <string name="numero_error">Número inválido.</string>
    <string name="add_telefone_error">Erro ao inserir o número.</string>
    <string name="add_email_error">Erro ao inserir o email.</string>
    <string name="edit_nome_error">Nome vazio.</string>
</resources>